--- a/css/header.css
+++ b/css/header.css
@@ -1,7 +1,9 @@
 
 header {
+    position: sticky;
+    top: 0;
+    z-index: 1000;
     background-color: var(--black);
-    color: var(--white);
 }
 
 .header-elements {
@@ -39,12 +41,13 @@ header h4 {
 header a {
     color: inherit;
     text-decoration: none;
-    font-family: 'Open Sans', sans-serif;
+    font-family: var(--sans);
     font-size: 16px;
     font-weight: 400;
     line-height: 28px;
     letter-spacing: 0.04em;
     text-align: left;
+    transition: 1s;
 }
 
 .header-elements-right-part {
@@ -74,10 +77,15 @@ header a {
 .header-elements-right-part button {
     padding-right: 2.6vw;
     border-right: 1px solid var(--white);
+    transition: 1s;
 }
 
 .header-elements-right-part a {
     padding-left: 2.6vw;
+}
+
+header a:hover, header button:hover {
+    color: var(--gold);
 }
 
 
