--- a/css/front-page.css
+++ b/css/front-page.css
@@ -1,9 +1,55 @@
+/* ----------------- General Page Rules ----------------- */
+
+
+h2 {
+    font-size: 64px;
+    font-weight: 600;
+    line-height: 83px;
+    letter-spacing: 0.03em;
+    color: var(--gold);
+}
+
+
+.gold-button {
+    display: inline-block;
+    padding: 8px 1.7vw;
+    background-color: var(--gold);
+    color: var(--other_black);
+    text-decoration: none;
+    text-transform: capitalize;
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 28px;
+    letter-spacing: 0.04em;
+    text-align: left;
+    /* transition: 1s; */
+}
+
+.gold-button:hover {
+    background-color: var(--darkgold);
+    color: var(--white);
+}
+
+.logo {
+    width: 7.5vw;
+    height: 7.5vw;
+}
+
+
+
+
+
+
+/* ----------------- Head Post's Section ----------------- */
+
 
 .section-head-posts {
-    position: relative;;
-    /* max-height: 100vh; */
+    position: relative;
+    ;
+    /* max-height: 80vh; */
     width: 100%;
     padding-top: 48px;
+    padding-bottom: 48px;
     /* padding-bottom: 152px; */
 
 
@@ -67,31 +113,13 @@
     padding-bottom: 32px;
 }
 
-.section-head-posts-content-text-container a {
-    padding: 8px 1.7vw;
-    background-color: var(--gold);
-    color: var(--other_black);
-    text-decoration: none;
-    text-transform: capitalize;
-    font-size: 16px;
-    font-weight: 700;
-    line-height: 28px;
-    letter-spacing: 0.04em;
-    text-align: left;
-    transition: 1s;
-}
-
-.section-head-posts-content-text-container a:hover {
-    background-color: var(--black);
-    color: var(--white);
-}
-
 .section-head-posts-content-image-container {
     position: relative;
     width: 50%;
     padding-top: 1.25vw;
     padding-left: 1.25vw;
     margin-bottom: 1.25vw;
+    max-height: 60vh;
 }
 
 .section-head-posts-content-frame {
@@ -118,6 +146,12 @@
     height: 100%;
     z-index: 2;
 }
+
+
+
+
+
+
 
 /* .scroll-link {
     position: absolute;
@@ -150,7 +184,82 @@
 } */
 
 
-.slick-dots {
-    color: red !important;
-    z-index: 1000000;
+.test {
+    font-size: 60px;
+    color: black;
 }
+
+
+/* ----------------- Section Knife ----------------- */
+
+
+.section-knife {
+    position: relative;
+    /* height: 100vh; */
+    background-size: cover;
+}
+
+.section-knife .container {
+    height: inherit;
+}
+
+.background-letter {
+    position: absolute;
+    width: 21.6vw;
+    z-index: 1;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.spoon.upset {
+    transform: scaleX(-1);
+}
+
+.section-knife-content {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 128px 9.8vw;
+    z-index: 2;
+    position: relative;
+}
+
+.left {
+    text-align: right;
+}
+
+.section-knife-content-text-container {
+    
+}
+
+.section-knife-content-text-container .spoon {
+    padding-top: 8px;
+    padding-bottom: 32px;
+}
+
+.section-knife-content-text-container p {
+    font-family: var(--sans);
+    color: var(--grey);
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 28px;
+    letter-spacing: 0.04em;
+    padding-bottom: 32px;
+}
+
+.section-knife-content-image {
+    width: 4.4vw;
+    padding: 0 4.4vw;
+}
+
+.section-knife .logo {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    margin-right: 7.8vw;
+}
+
+
+
+
