--- a/css/globals.css
+++ b/css/globals.css
@@ -14,6 +14,7 @@ html {
     --other_black: #0C0B08;
     --white: #FFFFFF;
     --gold: #DCCA87;
+    --darkgold: #968445;
     --grey: #AAAAAA;
     --cormorant: 'Cormorant Upright', serif;
     --sans: 'Open Sans', sans-serif;
