--- a/css/header.css
+++ b/css/header.css
@@ -47,7 +47,7 @@ header a {
     line-height: 28px;
     letter-spacing: 0.04em;
     text-align: left;
-    transition: 1s;
+    /* transition: 1s; */
 }
 
 .header-elements-right-part {
@@ -77,7 +77,7 @@ header a {
 .header-elements-right-part button {
     padding-right: 2.6vw;
     border-right: 1px solid var(--white);
-    transition: 1s;
+    /* transition: 1s; */
 }
 
 .header-elements-right-part a {
