--- a/css/globals.css
+++ b/css/globals.css
@@ -18,6 +18,7 @@ html {
     --grey: #AAAAAA;
     --cormorant: 'Cormorant Upright', serif;
     --sans: 'Open Sans', sans-serif;
+    --header_height: 120px;
 
 }
 
