--- a/css/header.css
+++ b/css/header.css
@@ -1,9 +1,12 @@
 
 header {
-    position: sticky;
-    top: 0;
+    position: fixed;
+    /* top: 0; */
     z-index: 1000;
     background-color: var(--black);
+    height: var(--header_height);
+    max-height: var(--header_height);
+    overflow: hidden;
 }
 
 .header-elements {
