--- a/css/globals.css
+++ b/css/globals.css
@@ -12,6 +12,7 @@ html {
 :root {
     --black:#0C0C0C;
     --other_black: #0C0B08;
+    --form_black: #0C0C0C;
     --white: #FFFFFF;
     --gold: #DCCA87;
     --darkgold: #968445;
