menu block is done

--- a/css/header.css
+++ b/css/header.css
@@ -3,7 +3,8 @@ header {
     position: fixed;
     /* top: 0; */
     z-index: 1000;
-    background-color: var(--black);
+    /* background-color: var(--black); */
+    background-color: green;
     height: var(--header_height);
     max-height: var(--header_height);
     overflow: hidden;
