--- a/css/front-page.css
+++ b/css/front-page.css
@@ -231,10 +231,15 @@ h2 {
     position: relative;
     /* height: 100vh; */
     background-size: cover;
+    height: calc(100vh - var(--header_height));
+    max-height: calc(100vh - var(--header_height));
+
 }
 
 .section-knife .container {
     height: inherit;
+    display: flex;
+    align-items: center;
 }
 
 .background-letter {
@@ -254,7 +259,7 @@ h2 {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 128px 9.8vw;
+    padding: 0 9.8vw;
     z-index: 2;
     position: relative;
 }
@@ -287,7 +292,7 @@ h2 {
 
 .section-knife .logo {
     position: absolute;
-    bottom: 0;
+    bottom: -15%;
     right: 0;
     margin-right: 7.8vw;
 }
