first commit in new branch

--- a/css/front-page.css
+++ b/css/front-page.css
@@ -235,6 +235,12 @@ h6 {
 }
 
 
+.slider-one {
+   opacity: 0;
+   visibility: hidden;
+}
+
+
 
 /* ----------------- Section Knife ----------------- */
 
