--- a/css/globals.css
+++ b/css/globals.css
@@ -16,6 +16,7 @@ html {
     --white: #FFFFFF;
     --gold: #DCCA87;
     --darkgold: #968445;
+    --lightgold: #F5EFDB;
     --grey: #AAAAAA;
     --cormorant: 'Cormorant Upright', serif;
     --sans: 'Open Sans', sans-serif;
