--- a/css/block-video-banner.css
+++ b/css/block-video-banner.css
@@ -25,3 +25,15 @@
     transform: translate(-50%, -50%) scale(1.15);
 }
 
+
+#section-video-logo {
+    position: absolute;
+    top: 147px;
+    left: 10.3vw;
+    z-index: 2;
+    transition: 1s;
+}
+
+#section-video-logo:hover {
+    opacity: 0;
+} 
