--- a/css/block-video-banner.css
+++ b/css/block-video-banner.css
@@ -28,7 +28,7 @@
 
 #section-video-logo {
     position: absolute;
-    top: 147px;
+    top: 8vh;
     left: 10.3vw;
     z-index: 2;
     transition: 1s;
