just save in progress

--- a/css/front-page.css
+++ b/css/front-page.css
@@ -227,7 +227,7 @@ h6 {
     font-size: 16px;
     font-weight: 700;
     line-height: 28px;
-    letter-spacing: 0.04em; 
+    letter-spacing: 0.04em;
 }
 
 .scroll-button:hover {
@@ -236,8 +236,8 @@ h6 {
 
 
 .slider-one {
-   opacity: 0;
-   visibility: hidden;
+    opacity: 0;
+    visibility: hidden;
 }
 
 
@@ -433,6 +433,69 @@ h6 {
 
 
 
+/* ----------------- Section Blogs ----------------- */
+
+.section-blogs .container {
+    display: flex;
+    justify-content: center;
+}
+
+.section-blogs-content {
+    width: 68vw;
+}
+
+.section-blogs-content-head {
+    text-align: center;
+    margin-bottom: 64px;
+}
+
+.section-blogs-content-head .spoon {
+    padding: 8px 0;
+}
+
+.section-blogs-content-head h2 {
+    text-transform: capitalize;
+}
+
+.section-blogs-content-posts-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    column-gap: 1.7vw;
+
+}
+
+
+.section-blogs-content-post img {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    /* object-fit: cover;
+    object-position: center; */
+}
+
+.section-blogs-image-container {
+    width: 100%;
+    height: 22.4vw;
+    max-height: 430px;
+    overflow: hidden;
+
+    position: relative;
+}
+
+
+
+
+
+
+
+
+
+
+
+
 /* --------------- Responsivity -------------- */
 
 
@@ -454,6 +517,3 @@ h6 {
 
     }
 }
-
-
-
