--- a/css/globals.css
+++ b/css/globals.css
@@ -14,6 +14,7 @@ html {
     --other_black: #0C0B08;
     --form_black: #0C0C0C;
     --white: #FFFFFF;
+    --other_white: #FAFAFA;
     --gold: #DCCA87;
     --darkgold: #968445;
     --lightgold: #F5EFDB;
