--- a/css/block-gallery.css
+++ b/css/block-gallery.css
@@ -1,8 +1,4 @@
-/* .test {
-    margin-left: 500px;
-    margin-right: -200px;
-    overflow: hidden;
-} */
+
 
 .gallery-container {
     padding: 128px 0 128px 16vw;
@@ -42,10 +38,10 @@
 
 }
 
-/* .sbi_link_area {
-    z-index: -100000000 !important;
-} */
 
+
+
+/* ----------- Slider's styles ----------- */
 
 .sbi_photo {
     height: 100% !important;
@@ -73,10 +69,23 @@
     position: absolute;
     top: 44% !important;
     left: 36% !important;
-    /* transform: translate(-52%, -15%) !important; */
 }
 
 .svg-inline--fa.fa-instagram.fa-w-14, .sbi_instagram_link {
     width: 45px !important;
     height: 45px !important;
+}
+
+
+
+@media screen and (max-width: 1600px) {
+
+.section-gallery-slider {
+    width: 100vw;
+    margin-right: -45vw;
+    height: 100%;
+    min-height: 45vh;
+
+}
+
 }
