--- a/css/block-gallery.css
+++ b/css/block-gallery.css
@@ -67,8 +67,10 @@
 
 .sbi_instagram_link {
     position: absolute;
-    top: 44% !important;
-    left: 36% !important;
+    /* top: 44% !important;
+    left: 36% !important; */
+    top: 20vh;
+    left: 5.7vw;
 }
 
 .svg-inline--fa.fa-instagram.fa-w-14, .sbi_instagram_link {
@@ -80,12 +82,26 @@
 
 @media screen and (max-width: 1600px) {
 
+    .section-gallery-text {
+        width: 35vw;
+        padding-right: 3.3vw;
+        padding-top: 81px;
+        padding-bottom: 81px;
+    }
+
+
+
 .section-gallery-slider {
     width: 100vw;
-    margin-right: -45vw;
+    margin-right: -48vw;
     height: 100%;
     min-height: 45vh;
+}
 
+.sbi_instagram_link {
+    position: absolute;
+    top: 20vh;
+    left: 9.3vw;
 }
 
 }
