--- a/css/block-menu.css
+++ b/css/block-menu.css
@@ -181,3 +181,8 @@
     grid-template-columns: 3fr 3fr 1fr;
     margin-bottom: 9px;
 }
+
+.section-menu .logo {
+    position: absolute;
+    top: 15px;
+}
