--- a/css/block-chefs-word.css
+++ b/css/block-chefs-word.css
@@ -93,10 +93,11 @@
     letter-spacing: 0.04em;
     color: var(--grey);
     margin-bottom: 64px;
-} 
+}
 
 .section-chefs-word-caption {
     width: 12.2vw;
+    min-width: 200px;
 }
 
 .section-chefs-word .logo {
@@ -104,4 +105,30 @@
     margin-top: 4.8vw;
     right: 0;
     margin-right: 7.8vw;
+}
+
+
+
+
+
+@media screen and (max-width: 1000px) {
+
+    .section-chefs-word-content {
+        flex-direction: column;
+        align-items: center;
+        row-gap: 32px;
+    }
+
+    .section-chefs-word-content-image-container {
+        width: 80%;
+    }
+
+    .section-chefs-word-content-text-container {
+        width: 80%;
+    }
+
+    .section-chefs-word .logo {
+        margin-top: 100px;
+    }
+
 }
