--- a/css/block-customers.css
+++ b/css/block-customers.css
@@ -82,3 +82,46 @@
     color: #F5EFDB;
 
 }
+
+
+
+@media screen and (max-width: 1000px) {
+    .section-customers-content  {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .section-customers-element {
+        width: 80%;
+    }
+
+    .section-customers-element-image-container {
+        width: 35%;
+        margin-right: 5%;
+    }
+
+    .section-customers-element-text-container {
+        width: 60%;
+        min-width: 250px;
+    }
+}
+
+@media screen and (max-width: 800px) {
+
+    .section-customers-element {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .section-customers-element-image-container {
+        width: 80%;
+        min-width: 250px;
+        margin-right: 0;
+        margin-bottom: 24px;
+    }
+
+    .section-customers-element-text-container {
+        width: 80%;
+    }
+
+}
