--- a/css/header.css
+++ b/css/header.css
@@ -1,4 +1,3 @@
-
 header {
     position: fixed;
     /* top: 0; */
@@ -30,12 +29,12 @@ header h4 {
 .menu-header-menu-container {
     display: flex;
     align-items: center;
-    padding: 0 2vw; 
+    padding: 0 2vw;
 }
 
 #menu-header-menu {
     display: flex;
-    align-items: center; 
+    align-items: center;
     flex-wrap: wrap;
     justify-content: center;
     gap: 1.5vw;
@@ -65,7 +64,8 @@ header a {
     text-align: left;
 }
 
-.header-elements-right-part button, .header-elements-right-part a  {
+.header-elements-right-part button,
+.header-elements-right-part a {
     border: none;
     background-color: inherit;
     color: inherit;
@@ -88,13 +88,34 @@ header a {
     padding-left: 2.6vw;
 }
 
-header a:hover, header button:hover {
+header a:hover,
+header button:hover {
     color: var(--gold);
 }
 
 
 @media screen and (max-width: 1200px) {
-   
-    
-    
+
+    .header-elements-right-part {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .header-elements-right-part button {
+        padding: 0;
+        padding-bottom: 0.75vw;
+        border-bottom: 1px solid var(--white);
+        border-right: none;
+    }
+
+    .header-elements-right-part a {
+        padding-left: 0;
+        padding-top: 0.75vw;
+    }
+}
+
+@media screen and (max-width: 800px) {
+
+/* Need Burger menu */
+
 }
