--- a/css/block-gallery.css
+++ b/css/block-gallery.css
@@ -1,5 +1,3 @@
-
-
 .gallery-container {
     padding: 128px 0 128px 16vw;
     min-width: 84vw;
@@ -62,7 +60,7 @@
 }
 
 .sbi_link {
-    padding-left: 10px !important;  
+    padding-left: 10px !important;
 }
 
 .sbi_instagram_link {
@@ -73,7 +71,8 @@
     left: 5.7vw;
 }
 
-.svg-inline--fa.fa-instagram.fa-w-14, .sbi_instagram_link {
+.svg-inline--fa.fa-instagram.fa-w-14,
+.sbi_instagram_link {
     width: 45px !important;
     height: 45px !important;
 }
@@ -89,19 +88,78 @@
         padding-bottom: 81px;
     }
 
+    .section-gallery-slider {
+        width: 100vw;
+        margin-right: -48vw;
+        height: 100%;
+        min-height: 45vh;
+    }
 
-
-.section-gallery-slider {
-    width: 100vw;
-    margin-right: -48vw;
-    height: 100%;
-    min-height: 45vh;
+    .sbi_instagram_link {
+        position: absolute;
+        top: 20vh;
+        left: 9.3vw;
+    }
 }
 
-.sbi_instagram_link {
-    position: absolute;
-    top: 20vh;
-    left: 9.3vw;
+
+
+@media screen and (max-width: 1200px) {
+
+    .section-gallery-slider {
+        width: 170vw;
+        margin-right: -125vw;
+        height: 100%;
+        min-height: 45vh;
+    }
+
+    .sbi_instagram_link {
+        position: absolute;
+        top: 20vh;
+        left: 9.3vw;
+    }
+
 }
 
+
+@media screen and (max-width: 800px) {
+
+    .gallery-container {
+        flex-wrap: wrap;
+        padding-left: 0;
+    }
+
+    .section-gallery-text {
+        width: 100%;
+        padding-right: 16vw;
+        padding-left: 16vw;
+    }
+
+    .section-gallery-slider {
+        order: -1;
+    }
+
+    .section-gallery-slider {
+        width: 240vw;
+        margin-left: 15vw;
+        margin-right: -160vw;
+        height: 100%;
+    }
+}
+
+@media screen and (max-width: 700px) {
+    .section-gallery-slider {
+        width: 220vw;
+        margin-left: 15vw;
+        margin-right: -160vw;
+        height: 100%;
+    }
+}
+
+@media screen and (max-width: 500px) {
+    .section-gallery-slider {
+        width: 220vw;
+        margin-left: -5vw;
+        margin-right: -160vw;
+    }
 }
