--- a/css/front-page.css
+++ b/css/front-page.css
@@ -96,6 +96,7 @@
     width: 32vw;
     padding: 1.25vw;
     z-index: 2;
+    max-height: 60vh;
 }
 
 .section-head-posts-content-frame {
@@ -340,6 +341,7 @@
     font-feature-settings: 'tnum' on, 'lnum' on;
     text-align: center;
     width: 4.2vw;
+    min-width: 50px;
 
     position: absolute;
     top: 50%;
@@ -354,6 +356,7 @@
     top: 50%;
     left: 0;
     width: 4.2vw;
+    min-width: 50px;
     height: auto;
     transform: translateY(-50%);
 }
@@ -382,6 +385,10 @@
     bottom: 0;
     left: 0;
     height: 55%;
+}
+
+.section-laurels-goals-element-text-container {
+    padding-left: 1.6vw;
 }
 
 
@@ -435,6 +442,8 @@
 
 
 
+
+
 @media screen and (max-width: 1300px) {
 
     .section-head-posts-content-text-container2 {
@@ -452,6 +461,15 @@
 
     .section-head-posts-content-text, .section-knife-content-text-container p {
         font-size: 12px;
+    }
+
+    .section-laurels-goals {
+        grid-template-columns: 1fr;
+        row-gap: 32px;
+    }
+
+    .section-laurels-content-right-part {
+        align-self: flex-end;
     }
 }
 
@@ -545,6 +563,25 @@
         width: 70%;
     }
 
+    .section-laurels-goals-element-text-container {
+        padding-left: 24px;
+    }
+
+}
+
+
+
+
+@media screen and (max-width: 800px) {
+    .section-laurels-content {
+        flex-direction: column;
+    }
+
+    .section-laurels-content-right-part {
+        align-self: center;
+        margin-top: 64px;
+        width: 60%;
+    }
 }
 
 
@@ -557,6 +594,14 @@
 
     .section-knife-content-text-container {
         width: 90%;
+    }
+
+    .section-laurels-goals-element-text-container {
+        padding-left: 40px;
+    }
+
+    .section-laurels-content-right-part {
+        width: 75%;
     }
 }
 
@@ -575,5 +620,9 @@
 
     .background-letter {
         display: none;
+    }
+
+    .section-laurels-goals-element-text-container {
+        padding-left: 50px;
     }
 }
