--- a/css/404.css
+++ b/css/404.css
@@ -11,17 +11,15 @@
     padding: 0 34vw;
     min-width: 32vw;
     display: flex;
-    /* position: relative; */
     justify-content: center;
     align-items: center;
-    height: calc(100vh - var(--header_height));
+    min-height: calc(100vh - var(--header_height) - 80px);
     margin-top: var(--header_height);
 }
 
 .page-404-content {
-    text-align: center;  
-    /* width: 100%;
-    height: 100%; */
+    text-align: center;
+    padding: 32px 0;  
 }
 
 .page-404-text {
@@ -36,11 +34,19 @@
     padding: 32px 0;
 }
 
+
+.page-404-copyright-container {
+    width: 100vw;
+    text-align: center;
+    padding: 32px 0;
+    height: 16px;
+}
+
 .page-404-container .footer-text-style {
-    position: absolute;
+    /* position: absolute;
     bottom: 32px;
     left: 50%;
-    transform: translateX(-50%);
+    transform: translateX(-50%); */
 
     font-family: var(--sans);
     font-weight: 400;
@@ -92,6 +98,18 @@
 }
 
 
+
+
+
+@media screen and (max-width: 800px) {
+
+    .page-404-container .logo.top {
+        top: 150px;
+    }
+
+}
+
+
 @media screen and (max-width: 600px) {
 
     .page-404-image {
@@ -100,7 +118,7 @@
     }
 
     .page-404-container .logo.bottom {
-        bottom: 150px;
+        bottom: 100px;
     }
 
 }
