full functional of timer is done

--- a/css/coming-soon.css
+++ b/css/coming-soon.css
@@ -127,6 +127,16 @@
 }
 
 
+.coming-soon-time-element .number.active {
+    color: var(--gold);
+}
+
+
+
+
+
+
+
 @media screen and (max-width: 1600px) {
 
     .page-coming-soon-container {
